# Acharya_Prashant

./: .gitattributes  .gitignore  Dockerfile  README.md  app.py  config.py  download_vtt.py  embed_transcripts.py  generate_response.py  main.py  preprocess.py  pyproject.toml  requirements.txt  retrieve_context.py  vtt_to_txt.py
.github/workflows/: main.yml  space-keepalive.yml
api/: embed_transcripts.py  generate_response.py  retrieve_context.py
data/: file_paths.pkl  requirements.txt  transcript_index.faiss  transcripts.pkl  youtube_cookies.txt
data/transcripts_txt/: -0jZ6Q62y2o.en.txt  -1c6uRbxCzQ.en.txt  -1reyJBvV2U.en.txt  -2ueh-iAyuw.en.txt  -3whFZTLQq0.en.txt  -48EigX4Agg.en.txt  -4dl0MbuKrY.en.txt  -5Hm8DObzmI.en.txt  -5ivYwVbgVc.en.txt  -6Ii59Qw7mM.en.txt  -6mD9zJJQpU.en.txt  -6s1xMwQufw.en.txt  -6uHVmTZ4oA.en.txt  -75oX7RwRqE.en.txt  -7q7hKspV7Y.en.txt  -8O2126hHlQ.en.txt  -B7o5-BNecA.en.txt  -BXmPDIp6cY.en.txt  -BlvL1wutAw.en.txt  -BphcNnkQak.en.txt  -CVN5hx5KFc.en.txt  -CXD2jCv70s.en.txt  -DWoE44pvGQ.en.txt  -DkSoNMwUvM.en.txt  -Dl1S4MvNG4.en.txt  -DxmDQJ5RY8.en.txt  -E9Btf6dFmY.en.txt  -EPTuiuv9cY.en.txt  -EdVlrtYNF8.en.txt  -Fuq57BPzjU.en.txt  -FvJn6umTFs.en.txt  -GUcZZOMSHI.en.txt  -H7W_8zKVso.en.txt  -HIPvggFLUo.en.txt  -HdjlsygNQU.en.txt  -ILS79JmU4E.en.txt  -Iyi51D2P78.en.txt  -J9BkBsZU0U.en.txt  -JFBU4lVR1M.en.txt  -JMGRUqRbbs.en.txt  (+8969 more)
frontend/: index.html
models/: transcript_index_en.faiss
outputs/: generated_response.txt  retrieved_transcripts.txt
utils/: download_vtt.py  preprocess.py  token.py  vtt_to_txt.py  youtube_cookies.txt
